--- a/config
+++ b/config
@@ -1,5 +1,5 @@
 # Smoothieboard configuration file, see http://smoothieware.org/configuring-smoothie
-#Damien MIRAS : for monoprice select v2
+#config for monoprice select v2
 
 # Basic motion configuration
 default_feed_rate                            4000             # Default speed (mm/minute) for G1/G2/G3 moves
@@ -46,7 +46,7 @@ beta_current                                 1.00             # Y stepper motor 
 beta_max_rate                                30000.0          # Maxmimum rate in mm/min
 
 gamma_step_pin                               2.2              # Pin for gamma stepper step signal
-gamma_dir_pin                                0.20!            # Pin for gamma stepper direction, add '!' to reverse direction
+gamma_dir_pin                                0.20             # Pin for gamma stepper direction, add '!' to reverse direction
 gamma_en_pin                                 0.19             # Pin for gamma enable
 gamma_current                                1.00             # Z stepper motor current
 gamma_max_rate                               300.0            # Maximum rate in mm/min
@@ -57,7 +57,7 @@ extruder.hotend.enable                          true          # Whether to activ
 extruder.hotend.steps_per_mm                     97           # Steps per mm for extruder stepper
 extruder.hotend.default_feed_rate               600           # Default rate ( mm/minute ) for moves where only the extruder moves
 extruder.hotend.acceleration                    500           # Acceleration for the stepper motor mm/sec²
-extruder.hotend.max_speed                       50            # Maximum speed in mm/s
+extruder.hotend.max_speed                        50           # Maximum speed in mm/s
 
 extruder.hotend.step_pin                        2.3           # Pin for extruder step signal
 extruder.hotend.dir_pin                         0.22          # Pin for extruder dir signal ( add '!' to reverse direction )
@@ -128,8 +128,8 @@ temperature_control.hotend.max_temp          250              # Set maximum temp
 # Safety control is enabled by default and can be overidden here, the values show the defaults
 # See http://smoothieware.org/temperaturecontrol#runaway
 #temperature_control.hotend.runaway_heating_timeout      900  # How long it can take to heat up, max is 2040 seconds.
-temperature_control.hotend.runaway_cooling_timeout       10  # How long it can take to cool down if temp is set lower, max is 2040 seconds
-temperature_control.hotend.runaway_range                20   # How far from the set temperature it can wander, max setting is 63°C
+temperature_control.hotend.runaway_cooling_timeout       10   # How long it can take to cool down if temp is set lower, max is 2040 seconds
+temperature_control.hotend.runaway_range                 20   # How far from the set temperature it can wander, max setting is 63°C
 
 # PID configuration
 # See http://smoothieware.org/temperaturecontrol#pid
@@ -211,7 +211,7 @@ gamma_min_endstop                            1.28^!           # Pin to read min 
 #gamma_max_endstop                           1.29^            # Pin to read max endstop, uncomment this and comment the above if using max endstops
 gamma_homing_direction                       home_to_min      # Or set to home_to_max and set alpha_max and uncomment the alpha_max_endstop
 gamma_min                                    0                # This gets loaded as the current position after homing when home_to_min is set
-gamma_max                                    200              # This gets loaded as the current position after homing when home_to_max is set
+gamma_max                                    110              # This gets loaded as the current position after homing when home_to_max is set
 
 alpha_max_travel                             110              # Max travel in mm for alpha/X axis when homing
 beta_max_travel                              110              # Max travel in mm for beta/Y axis when homing
@@ -270,7 +270,7 @@ zprobe.probe_height                          5               # How much above be
 ## Panel
 # See http://smoothieware.org/panel
 # Please find your panel on the wiki and copy/paste the right configuration here
-panel.enable                                 false             # Set to true to enable the panel code
+panel.enable                                 true             # Set to true to enable the panel code
 
 # Example for reprap discount GLCD
 # on glcd EXP1 is to left and EXP2 is to right, pin 1 is bottom left, pin 2 is top left etc.
