--- a/config
+++ b/config
@@ -128,8 +128,8 @@ temperature_control.hotend.max_temp          250              # Set maximum temp
 # Safety control is enabled by default and can be overidden here, the values show the defaults
 # See http://smoothieware.org/temperaturecontrol#runaway
 #temperature_control.hotend.runaway_heating_timeout      900  # How long it can take to heat up, max is 2040 seconds.
-temperature_control.hotend.runaway_cooling_timeout       10   # How long it can take to cool down if temp is set lower, max is 2040 seconds
-temperature_control.hotend.runaway_range                 20   # How far from the set temperature it can wander, max setting is 63°C
+#temperature_control.hotend.runaway_cooling_timeout       10   # How long it can take to cool down if temp is set lower, max is 2040 seconds
+#temperature_control.hotend.runaway_range                 40   # How far from the set temperature it can wander, max setting is 63°C
 
 # PID configuration
 # See http://smoothieware.org/temperaturecontrol#pid
