--- a/config
+++ b/config
@@ -78,20 +78,7 @@ extruder.hotend.en_pin                          0.21          # Pin for extruder
 
 delta_current                                    0.3          # First extruder stepper motor current
 
-# Second extruder module configuration
-#extruder.hotend2.enable                         true         # Whether to activate the extruder module at all. All configuration is ignored if false
-#extruder.hotend2.steps_per_mm                   140          # Steps per mm for extruder stepper
-#extruder.hotend2.default_feed_rate              600          # Default rate ( mm/minute ) for moves where only the extruder moves
-#extruder.hotend2.acceleration                   500          # Acceleration for the stepper motor, as of 0.6, arbitrary ratio
-#extruder.hotend2.max_speed                      50           # mm/s
 
-#extruder.hotend2.step_pin                       2.8          # Pin for extruder step signal
-#extruder.hotend2.dir_pin                        2.13         # Pin for extruder dir signal ( add '!' to reverse direction )
-#extruder.hotend2.en_pin                         4.29         # Pin for extruder enable signal
-
-#extruder.hotend2.x_offset                       0            # x offset from origin in mm
-#extruder.hotend2.y_offset                       25.0         # y offset from origin in mm
-#extruder.hotend2.z_offset                       0            # z offset from origin in mm
 
 #epsilon_current                                 1.5          # Second extruder stepper motor current
 
@@ -114,16 +101,39 @@ laser_module_pwm_pin                          2.5             # This pin will be
 # See http://smoothieware.org/temperaturecontrol
 
 # First hotend configuration
-temperature_control.hotend.enable            true             # Whether to activate this ( "hotend" ) module at all.
-temperature_control.hotend.thermistor_pin    0.23             # Pin for the thermistor to read
-temperature_control.hotend.heater_pin        2.7              # Pin that controls the heater, set to nc if a readonly thermistor is being defined
-temperature_control.hotend.thermistor        EPCOS100K        # See http://smoothieware.org/temperaturecontrol#toc5
-#temperature_control.hotend.beta             4066             # Or set the beta value
-temperature_control.hotend.set_m_code        104              # M-code to set the temperature for this module
-temperature_control.hotend.set_and_wait_m_code 109            # M-code to set-and-wait for this module
-temperature_control.hotend.designator        T                # Designator letter for this module
-temperature_control.hotend.max_temp          250              # Set maximum temperature - Will prevent heating above 300 by default
-#temperature_control.hotend.min_temp          30               # Set minimum temperature - Will prevent heating below if set
+temperature_control.hotend.enable              true             # Whether to activate this ( "hotend" ) module at all.
+temperature_control.hotend.thermistor_pin      0.24             # Pin for the thermistor to read
+temperature_control.hotend.heater_pin          2.7              # Pin that controls the heater, set to nc if a readonly thermistor is being defined
+temperature_control.hotend.thermistor          EPCOS100K        # See http://smoothieware.org/temperaturecontrol#toc5
+#temperature_control.hotend.beta               4066             # Or set the beta value
+temperature_control.hotend.set_m_code          104              # M-code to set the temperature for this module
+temperature_control.hotend.set_and_wait_m_code 109              # M-code to set-and-wait for this module
+temperature_control.hotend.designator            T              # Designator letter for this module
+temperature_control.hotend.max_temp            250              # Set maximum temperature - Will prevent heating above 300 by default
+#temperature_control.hotend.min_temp            30              # Set minimum temperature - Will prevent heating below if set
+
+# Switch module for fan control
+switch.fan.enable                            true             # Enable this module
+switch.fan.input_on_command                  M106             # Command that will turn this switch on
+switch.fan.input_off_command                 M107             # Command that will turn this switch off
+switch.fan.output_pin                        2.4              # Pin this module controls
+switch.fan.output_type                       pwm              # PWM output settable with S parameter in the input_on_comand
+switch.fan.max_pwm                           255              # Set max pwm for the pin default is 255
+
+## Temperatureswitch
+# See http://smoothieware.org/temperatureswitch
+# Automatically toggle a switch at a specified temperature. Different ones of these may be defined to monitor different temperatures and switch different swithxes
+# Useful to turn on a fan or water pump to cool the hotend
+temperatureswitch.hotend.enable              true            #
+temperatureswitch.hotend.designator          T               # first character of the temperature control designator to use as the temperature sensor to monitor
+temperatureswitch.hotend.switch              fan             # select which switch to use, matches the name of the defined switch
+temperatureswitch.hotend.threshold_temp      10.0            # temperature to turn on (if rising) or off the switch
+temperatureswitch.hotend.heatup_poll         2              # poll heatup at 15 sec intervals
+temperatureswitch.hotend.cooldown_poll       2              # poll cooldown at 60 sec intervals
+
+
+
+
 
 # Safety control is enabled by default and can be overidden here, the values show the defaults
 # See http://smoothieware.org/temperaturecontrol#runaway
@@ -131,17 +141,19 @@ temperature_control.hotend.max_temp          250              # Set maximum temp
 #temperature_control.hotend.runaway_cooling_timeout       10   # How long it can take to cool down if temp is set lower, max is 2040 seconds
 #temperature_control.hotend.runaway_range                 40   # How far from the set temperature it can wander, max setting is 63°C
 
+
+
 # PID configuration
 # See http://smoothieware.org/temperaturecontrol#pid
 #temperature_control.hotend.p_factor         13.7             # P ( proportional ) factor
 #temperature_control.hotend.i_factor         0.097            # I ( integral ) factor
 #temperature_control.hotend.d_factor         24               # D ( derivative ) factor
-
 #temperature_control.hotend.max_pwm          64               # Max pwm, 64 is a good value if driving a 12v resistor with 24v.
 
 
+
 temperature_control.bed.enable               true             # Whether to activate this ( "hotend" ) module at all.
-temperature_control.bed.thermistor_pin       0.24             # Pin for the thermistor to read
+temperature_control.bed.thermistor_pin       0.23             # Pin for the thermistor to read
 temperature_control.bed.heater_pin           2.5              # Pin that controls the heater
 temperature_control.bed.thermistor           Honeywell100K    # See http://smoothieware.org/temperaturecontrol#thermistor
 #temperature_control.bed.beta                3974             # Or set the beta value
@@ -149,27 +161,22 @@ temperature_control.bed.set_m_code           140              # M-code to set th
 temperature_control.bed.set_and_wait_m_code  190              # M-code to set-and-wait for this module
 temperature_control.bed.designator           B                # Designator letter for this module
 
-# Bang-bang ( simplified ) control
-# See http://smoothieware.org/temperaturecontrol#bang-bang
-#temperature_control.bed.bang_bang           false            # Set to true to use bang bang control rather than PID
-#temperature_control.bed.hysteresis          2.0              # Set to the temperature in degrees C to use as hysteresis
+switch.board.enable                          true           # Enable this module
+switch.board.input_on_command                M42            # Command that will turn this switch on
+switch.board.input_off_command               M43            # Command that will turn this switch off
+switch.board.output_pin                      2.6            # Pin this module controls
+switch.board.output_type                    digital         # Digital means this is just an on or off pin
+temperatureswitch.hotend.enable             true            #
+temperatureswitch.hotend.designator         B               # first character of the temperature control designator to use as the temperature sensor to monitor
+temperatureswitch.hotend.switch             board           # select which switch to use, matches the name of the defined switch
+temperatureswitch.hotend.threshold_temp     20.0            # temperature to turn on (if rising) or off the switch
+temperatureswitch.hotend.heatup_poll         2              # poll heatup at 15 sec intervals
+temperatureswitch.hotend.cooldown_poll       2              # poll cooldown at 60 sec intervals
+
 
 ## Switch modules
 # See http://smoothieware.org/switch
 
-# Switch module for fan control
-switch.fan.enable                            true             # Enable this module
-switch.fan.input_on_command                  M106             # Command that will turn this switch on
-switch.fan.input_off_command                 M107             # Command that will turn this switch off
-switch.fan.output_pin                        2.6              # Pin this module controls
-switch.fan.output_type                       pwm              # PWM output settable with S parameter in the input_on_comand
-#switch.fan.max_pwm                          255              # Set max pwm for the pin default is 255
-
-#switch.misc.enable                          true             # Enable this module
-#switch.misc.input_on_command                M42              # Command that will turn this switch on
-#switch.misc.input_off_command               M43              # Command that will turn this switch off
-#switch.misc.output_pin                      2.4              # Pin this module controls
-#switch.misc.output_type                     digital          # Digital means this is just an on or off pin
 
 #switch.bltouch.enable                    true         #
 #switch.bltouch.output_pin                2.4          # sw pwm can use any digital pin
@@ -182,16 +189,7 @@ switch.fan.output_type                       pwm              # PWM output setta
 #switch.bltouch.default_on_value          3.3          # if M280 is issued without S this is the value it will set it to
 
 
-## Temperatureswitch
-# See http://smoothieware.org/temperatureswitch
-# Automatically toggle a switch at a specified temperature. Different ones of these may be defined to monitor different temperatures and switch different swithxes
-# Useful to turn on a fan or water pump to cool the hotend
-#temperatureswitch.hotend.enable              true            #
-#temperatureswitch.hotend.designator          T               # first character of the temperature control designator to use as the temperature sensor to monitor
-#temperatureswitch.hotend.switch              misc            # select which switch to use, matches the name of the defined switch
-#temperatureswitch.hotend.threshold_temp      60.0            # temperature to turn on (if rising) or off the switch
-#temperatureswitch.hotend.heatup_poll         15              # poll heatup at 15 sec intervals
-#temperatureswitch.hotend.cooldown_poll       60              # poll cooldown at 60 sec intervals
+
 
 ## Endstops
 # See http://smoothieware.org/endstops
